# reduction

./: CMakeLists.txt  README.md
src/: host_main.cu  kernels.cu
